WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85908
HTMLElementStack::hasOnlyHTMLElementsInScope is no longer called
https://bugs.webkit.org/show_bug.cgi?id=85908
Summary
HTMLElementStack::hasOnlyHTMLElementsInScope is no longer called
Rafael Weinstein
Reported
2012-05-08 13:37:52 PDT
It's now dead code and can be removed.
Attachments
Patch
(2.40 KB, patch)
2012-05-08 13:40 PDT
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Weinstein
Comment 1
2012-05-08 13:40:01 PDT
Created
attachment 140771
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-05-08 13:50:14 PDT
Comment on
attachment 140771
[details]
Patch I'm glad to see more folks hacking on this code. :)
WebKit Review Bot
Comment 3
2012-05-08 15:05:51 PDT
Comment on
attachment 140771
[details]
Patch Clearing flags on attachment: 140771 Committed
r116457
: <
http://trac.webkit.org/changeset/116457
>
WebKit Review Bot
Comment 4
2012-05-08 15:05:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug