HTMLElementStack::hasOnlyHTMLElementsInScope is no longer called https://bugs.webkit.org/show_bug.cgi?id=85908

Reviewed by Eric Seidel.

This patch just removes the dead code.

No tests needed. Cleanup only.

* html/parser/HTMLElementStack.cpp:
* html/parser/HTMLElementStack.h:
(HTMLElementStack):


Canonical link: https://commits.webkit.org/103507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116457 268f45cc-cd09-0410-ab3c-d52691b4dbfc